projetGL/src/test/deca/extension/synt/invalid/test_invalid_13.deca
//Description: multiplication de matrice de tailles incompatibles

{
    float[][] matrixA = ;}
